- Support for 'divastreaming' available (Diva 4PRI PCI, Diva 2PRI PCI,
  Diva 4PRI HS PCIe, Diva 2PRI HS PCIe, Diva 1PRI HS PCIe,
  Diva 8PRI PCIe FS, Diva 4PRI PCIe FS)
- Fixed memory leak in chat_play if using with 's' option
- Add 'econtransitconn' configurations parameter. Allows to preserve
  EC for transit connections
- added variable DISCONNECT_IND_REASON to get real reason code from CAPI

chan_capi-1.1.5
------------------
- corrected check for Info value on CONNECT_B3_CONF
- fixed NULL-pointer in cid_name (asterisk 1.6 pickup revealed this)
- changed action on prodding in .write function to ignore it
- API adaptions to new asterisk trunk

chan_capi-1.1.4
------------------
- use extended fax if available only and have fine resolution on receive activated by default
- fixed chat error on creating third chat-room

chan_capi-1.1.3
------------------
- fixed buffer length error with internal libcapi debug code.
- performance optimizations, use debug code when needed only.
- added commands for media features supported by Dialogic(R) Diva(R) Media Boards
- added variable CAPI_CIP for full access to all bearer capabilities.
- fixed CAPI 'chat' for using more than 8 controllers.
- fixed CAPI 'chat' for not exceeding maximal size of CAPI message
- add color fax
- add autodetection of fax file format for sendfax command (SFF, CFF JPEG, CFF T.43, TEXT)
- add extension for FAX paper formats and resolutions
- adjust NULL PLCI LI path
- add resource PLCI
- add echocancelpath configuration option
- fixed possible race condition while waiting for DISCONNECT_CONF
- add static half duplex conference
- add dynamic half duplex conference
- add clear channel fax
- add DTMF detection for NULL PLCI
- use direct access to vocoders without RTP framing
- play message to conference and music on hold to caller
- add commands to remove users from chat
- allow to specity the 'ETS 300 102-1' called party number octet 3
- fixed possible buffer overflow in 'deflect'